# tv-backend-v3

./: .env.example  .gitignore  APIENDPOINTS.md  APIGATEWAY.md  DESIGNDOCUMENT.md  Makefile  PLAN.md  README.md  TASKS.md  docker-compose.yml
backend/templates/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/templates/src/: main.py
backend/templates/tests/: README.md  test_main.py
